# Ifood_Crawler_Py

./: .dockerignore  .env.example  .gitgnore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  export_from_db.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
checkpoints/: checkpoint.db
cookies/: cookies.json
data/: ifood_urls_padrao_item_1000.csv
output/: execution_report.txt  results.csv  results.json
src/adapters/: flaresolverr_client.py  parser.py  persistence.py  simple_http_client.py  url_provider.py
src/core/: models.py  orchestrator.py
src/infra/: circuit_breaker.py  cookie_store.py  logging_config.py  metrics.py  user_agent.py
tests/: test_adapters.py  test_circuit_breaker.py  test_cookie_store.py  test_models.py  test_parser.py
